[gd_scene load_steps=12 format=3 uid="uid://y61hurvn4hcq"]

[ext_resource type="Script" path="res://screens/scenes/menu_screen.gd" id="1_3hrr8"]
[ext_resource type="Texture2D" uid="uid://n8lc4gychwg3" path="res://screens/assets/menu_screen.png" id="1_vvb14"]
[ext_resource type="FontFile" uid="uid://b7adap3po7cft" path="res://screens/assets/font_cat.ttf" id="3_32m85"]
[ext_resource type="AudioStream" uid="uid://83vhkp5ino3d" path="res://screens/assets/click_sound.mp3" id="3_ltgx0"]
[ext_resource type="Texture2D" uid="uid://binbu4h6ddy41" path="res://screens/assets/icons/Icon_X.png" id="5_wpywn"]
[ext_resource type="Texture2D" uid="uid://cxl1wk68x32x3" path="res://screens/assets/icons/Icon_Tube.png" id="6_thlky"]

[sub_resource type="LabelSettings" id="LabelSettings_h6yjt"]
font = ExtResource("3_32m85")
font_size = 250

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_maoqi"]
texture = ExtResource("5_wpywn")

[sub_resource type="Theme" id="Theme_ctwlu"]
Button/styles/hover = SubResource("StyleBoxTexture_maoqi")
Button/styles/normal = SubResource("StyleBoxTexture_maoqi")
Button/styles/pressed = SubResource("StyleBoxTexture_maoqi")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3b7n6"]
texture = ExtResource("6_thlky")

[sub_resource type="Theme" id="Theme_nuk4w"]
Button/styles/hover = SubResource("StyleBoxTexture_3b7n6")
Button/styles/normal = SubResource("StyleBoxTexture_3b7n6")
Button/styles/pressed = SubResource("StyleBoxTexture_3b7n6")

[node name="Menu_screen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3hrr8")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 2
offset_right = 1440.0
offset_bottom = 810.0
texture = ExtResource("1_vvb14")
expand_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 32.0
offset_top = -139.0
offset_right = 32.0
offset_bottom = -139.0
grow_horizontal = 2
grow_vertical = 2

[node name="ClickSound" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = ExtResource("3_ltgx0")

[node name="Label" type="Label" parent="."]
layout_mode = 2
offset_left = 436.0
offset_top = 127.0
offset_right = 1003.0
offset_bottom = 463.0
size_flags_horizontal = 4
text = "CATH-ME"
label_settings = SubResource("LabelSettings_h6yjt")
max_lines_visible = 5

[node name="ExitButton" type="Button" parent="."]
layout_mode = 2
offset_left = 1322.0
offset_top = 51.0
offset_right = 1403.0
offset_bottom = 130.0
size_flags_horizontal = 8
size_flags_vertical = 0
theme = SubResource("Theme_ctwlu")
theme_override_font_sizes/font_size = 59

[node name="StartButton" type="Button" parent="."]
layout_mode = 2
offset_left = 657.0
offset_top = 499.0
offset_right = 805.0
offset_bottom = 629.0
theme = SubResource("Theme_nuk4w")
theme_override_font_sizes/font_size = 40

[connection signal="finished" from="ClickSound" to="." method="_on_click_sound_finished"]
[connection signal="pressed" from="ExitButton" to="." method="_on_quit_buton_pressed"]
[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
